--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>About | Santhi Sri Jamisetty </title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+   
 </head>
 
 <body>
@@ -31,8 +32,8 @@
         </div>
     </header>
     <div id="maincontainer" class="container">
-        <section class="topsection" >
-            <h1 >About Me</h1>
+        <section class="topsection">
+            <h1>About Me</h1>
             <img class="pro-img" src="assets/images/my_img.jpeg" alt="my_picture">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum accusantium iusto maiores natus quas id nisi.
                 Libero voluptas itaque veritatis molestiae maxime repellat ratione, delectus quisquam explicabo nisi rem
@@ -47,7 +48,8 @@
                 delectus asperiores, repellendus nemo corrupti voluptas autem molestias officia temporibus eaque numquam
                 consequatur laboriosam? Laboriosam reprehenderit numquam, beatae vero deleniti pariatur praesentium ipsum,
                 alias mollitia quas ipsa rem assumenda laudantium omnis culpa aut? Voluptatum dolores officiis veniam omnis
-                dolorem. </p>
+                dolorem. Saepe ut neque, explicabo vel incidunt nesciunt repudiandae vitae necessitatibus quibusdam accusamus
+                ullam, beatae temporibus nulla provident rem ratione amet iusto! Maxime iste ad quas ex?</p>
 
         </section>
     </div>
